@@ -249,7 +249,7 @@ HRESULT Pin3D::InitPin3D(const HWND hwnd, const bool fullScreen, const int width
 
    //
 
-   if (stereo3D || useAO) {
+   if(m_pd3dDevice->DepthBufferReadBackAvailable()) /*(stereo3D || useAO)*/ {
       m_pdds3DZBuffer = m_pd3dDevice->DuplicateDepthTexture(m_pddsZBuffer);
 
       //!! could use this as depth render target, if not had to render to & copy static z also around (stretchrect does not work with textures)
@@ -260,7 +260,7 @@ HRESULT Pin3D::InitPin3D(const HWND hwnd, const bool fullScreen, const int width
          return E_FAIL;
    }
 
-   if (useAO) {
+   if(m_pd3dDevice->DepthBufferReadBackAvailable()) /*(useAO)*/ {
       CHECKD3D(m_pd3dDevice->GetCoreDevice()->CreateTexture(width, height, 1,
          D3DUSAGE_RENDERTARGET, D3DFMT_L8, D3DPOOL_DEFAULT, &m_pddsAOBackTmpBuffer, NULL));
       CHECKD3D(m_pd3dDevice->GetCoreDevice()->CreateTexture(width, height, 1,
