@@ -3,7 +3,7 @@
 float4 ms_zpd_ya_td;
 float4 w_h_height; // in bloom w_h_height.z keeps strength
 
-float AO_scale;
+float2 AO_scale_timeblur;
 float mirrorFactor;
 
 /*static*/ bool color_grade;
@@ -172,6 +172,13 @@ float4 ps_main_fb_tonemap_AO( in VS_OUTPUT_2D IN) : COLOR
     return float4(FBColorGrade(FBGamma(saturate(result))), 1.0);
 }
 
+float4 ps_main_fb_tonemap_AO_static(in VS_OUTPUT_2D IN) : COLOR
+{
+	const float3 result = tex2Dlod(texSampler5, float4(IN.tex0, 0., 0.)).xyz
+	* tex2Dlod(texSampler3, float4(IN.tex0/*-w_h_height.xy*/, 0., 0.)).x; // omitting the shift blurs over 2x2 window
+	return float4(result, 1.0);
+}
+
 float4 ps_main_fb_tonemap_no_filter( in VS_OUTPUT_2D IN) : COLOR
 {
     const float3 result = FBToneMap(tex2Dlod(texSampler4, float4(IN.tex0+w_h_height.xy, 0.,0.)).xyz) + tex2Dlod(texSamplerBloom, float4(IN.tex0, 0.,0.)).xyz; //!! offset?
@@ -184,6 +191,13 @@ float4 ps_main_fb_tonemap_AO_no_filter( in VS_OUTPUT_2D IN) : COLOR
            * tex2Dlod(texSampler3, float4(IN.tex0/*-w_h_height.xy*/, 0.,0.)).x // omitting the shift blurs over 2x2 window
 	   + tex2Dlod(texSamplerBloom, float4(IN.tex0, 0.,0.)).xyz;  //!! offset?
     return float4(FBColorGrade(FBGamma(saturate(result))), 1.0);
+}
+
+float4 ps_main_fb_tonemap_AO_no_filter_static(in VS_OUTPUT_2D IN) : COLOR
+{
+	const float3 result = tex2Dlod(texSampler4, float4(IN.tex0 + w_h_height.xy, 0., 0.)).xyz
+	* tex2Dlod(texSampler3, float4(IN.tex0/*-w_h_height.xy*/, 0., 0.)).x; // omitting the shift blurs over 2x2 window
+	return float4(result, 1.0);
 }
 
 //
@@ -327,6 +341,15 @@ technique fb_tonemap_AO
    } 
 }
 
+technique fb_tonemap_AO_static
+{
+	pass P0
+	{
+		VertexShader = compile vs_3_0 vs_main_no_trafo();
+		PixelShader = compile ps_3_0 ps_main_fb_tonemap_AO_static();
+	}
+}
+
 technique fb_tonemap_no_filter
 { 
    pass P0 
@@ -345,6 +368,15 @@ technique fb_tonemap_AO_no_filter
 
 	  //!! SRGBWriteEnable = true;
    } 
+}
+
+technique fb_tonemap_AO_no_filter_static
+{
+	pass P0
+	{
+		VertexShader = compile vs_3_0 vs_main_no_trafo();
+		PixelShader = compile ps_3_0 ps_main_fb_tonemap_AO_no_filter_static();
+	}
 }
 
 technique fb_bloom_horiz
